demo01/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: demo01
  labels:
    app: hello
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8080
  selector:
    app: hello
